--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <div>
-        <p>API Key: <input type="text"/></p>
-    </div>
-  </body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Gourmet Roasters Homepage">
+        <title><%= title %></title>
+
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+
+        <link rel='stylesheet' href='/stylesheets/style.css'/>
+
+        <!-- Favicon -->
+        <link rel="icon" href="/images/emoji-package-w10.png">
+
+        <!-- Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div id="div-body">
+            <div class="row d-flex align-items-center justify-content-center">
+                <div class="col-lg-10">
+                    <div class="p-2 box-round theme-purple">
+                        <h3 class="p-2 m-1 d-flex align-items-center">
+                            <div class="col-2 align-items-center">API Key: </div>
+                            <input class="col-10" type="text"/>
+                        </h3>                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
