--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -22,16 +22,55 @@
     </head>
     <body>
         <div id="div-body">
+            <!-- API Key Header -->
             <div class="row d-flex align-items-center justify-content-center">
-                <div class="col-lg-10">
+                <div class="col-lg-11">
                     <div class="p-2 box-round theme-purple">
                         <h3 class="p-2 m-1 d-flex align-items-center">
-                            <div class="col-2 align-items-center">API Key: </div>
-                            <input class="col-10" type="text"/>
-                        </h3>                        
+                            <div class="col align-items-center">API Key: </div>
+                            <input id="input-api-key" class="col-8" type="text"/>
+                            <input id="input-submit-api" class="col m-2 btn btn-primary" type="submit" value="Authenticate"/>
+                        </h3>
                     </div>
                 </div>
             </div>
+
+            <div class="row container m-3">                
+                <div class="col"></div>
+                <!-- Robots -->
+                <div class="row col-5 m-2 box-round theme-red h-50">
+                    <h3 class="p-2 m-1">
+                        Robots
+                    </h3>
+                    <table class="table">
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">Location</th>
+                                <th scope="col">Holding</th>
+                                <th scope="col">State</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1234</th>
+                                <td>Loading Bay</td>
+                                <td>iPod</td>
+                                <td>Idle</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Locations -->
+                <div class="row col-5 m-2 box-round theme-yellow h-50">
+                    <h3 class="p-2 m-1">Locations</h3>
+                </div>
+
+                <div class="col"></div>
+            </div>
         </div>
     </body>
+
+    <script src="/javascripts/index.js"></script>
 </html>
