--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -47,7 +47,7 @@
                     <h3 class="p-2 m-1">
                         Robots
                     </h3>
-                    <table class="table">
+                    <table id="table-robots" class="table">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col">ID</th>
@@ -57,12 +57,12 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <!-- <tr>
                                 <th scope="row">1234</th>
                                 <td>Loading Bay</td>
                                 <td>iPod</td>
                                 <td>Idle</td>
-                            </tr>
+                            </tr> -->
                         </tbody>
                     </table>
                 </div>
