--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -70,6 +70,17 @@
                 <!-- Locations -->
                 <div class="row col-5 m-2 box-round theme-yellow h-50">
                     <h3 class="p-2 m-1">Locations</h3>
+                    <table id="table-locations" class="table">
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">Location</th>
+                                <th scope="col">Items</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
                 </div>
 
                 <div class="col"></div>
