Added location items

--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -47,7 +47,7 @@
                     <h3 class="p-2 m-1">
                         Robots
                     </h3>
-                    <table id="table-robots" class="table">
+                    <table id="table-robots" class="table table-hover">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col">ID</th>
@@ -70,7 +70,7 @@
                 <!-- Locations -->
                 <div class="row col-5 m-2 box-round theme-yellow h-50">
                     <h3 class="p-2 m-1">Locations</h3>
-                    <table id="table-locations" class="table">
+                    <table id="table-locations" class="table table-hover">
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col">ID</th>
@@ -83,6 +83,36 @@
                     </table>
                 </div>
 
+                <div class="col"></div>
+            </div>
+
+            <div class="row container m-3">
+                <div class="col"></div>
+
+                <!-- Selected Robot Information -->
+                <div class="row col-5 m-2 box-round theme-blue h-50">
+                    <h3 class="p-2 m-1">
+                        Robot Information
+                    </h3>
+                </div>
+
+                <!-- Selected Location Information-->
+                <div class="row col-5 m-2 box-round theme-green h-50">
+                    <h3 class="p-2 m-1">
+                        Location Information
+                    </h3>
+
+                    <table id="table-items" class="table table-hover">
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Item</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
                 <div class="col"></div>
             </div>
         </div>
