--- a/web-service/public/stylesheets/style.css
+++ b/web-service/public/stylesheets/style.css
@@ -50,3 +50,9 @@ a {
 .debug {
     border: 1px solid red;
 }
+
+.table-hover > tbody > tr:hover > td,
+.table-hover > tbody > tr:hover > th {
+    cursor: pointer;
+    background-color: rgb(219, 219, 219);
+}
