--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -94,6 +94,42 @@
                     <h3 class="p-2 m-1">
                         Robot Information
                     </h3>
+
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="fw-bold">ID</h5>
+                        </div>
+                        <div class="col-8">
+                            <h5 class="fst-italic" id="h5-robot-id"></h5>
+                        </div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="fw-bold">Location</h5>
+                        </div>
+                        <div class="col-8">
+                            <h5 class="fst-italic" id="h5-robot-location"></h5>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="fw-bold">Held Item</h5>
+                        </div>
+                        <div class="col-8">
+                            <h5 class="fst-italic" id="h5-robot-held-item"></h5>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <h5 class="fw-bold">Status</h5>
+                        </div>
+                        <div class="col-8">
+                            <h5 class="fst-italic" id="h5-robot-status"></h5>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Selected Location Information-->
