--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -158,6 +158,32 @@
                 <div class="col"></div>
             </div>
         </div>
+
+        <!-- Select Location Modal -->
+        <div class="modal fade" id="modal-select-location">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content align-items-center">
+                    <div class="modal-header" style="height: 10px;">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    </div>      
+                </div>                  
+            </div>
+        </div>
+        
+        <!-- Load Item Modal -->
+        <div class="modal fade" id="modal-select-item">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content align-items-center">
+                    <div class="modal-header" style="height: 10px;">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    </div>      
+                </div>                  
+            </div>
+        </div>
     </body>
 
     <script src="/javascripts/index.js"></script>
