Can now move robots using web!!

--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -160,15 +160,25 @@
         </div>
 
         <!-- Select Location Modal -->
-        <div class="modal fade" id="modal-select-location">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content align-items-center">
-                    <div class="modal-header" style="height: 10px;">
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal fade" id="modal-select-location" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Move Robot</h5>
+                        <button type="button" class="close btn" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
                     <div class="modal-body">
-                    </div>      
-                </div>                  
+                        <select name="new-location" id="select-new-location" class="form-select">
+
+                        </select>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" onclick="moveRobotConfirm(this)" data-bs-dismiss="modal">Move</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    </div>
+                </div>               
             </div>
         </div>
         
