--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -175,7 +175,7 @@
                         </select>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" onclick="moveRobotConfirm(this)" data-bs-dismiss="modal">Move</button>
+                        <button type="button" class="btn btn-primary" onclick="moveRobotConfirm()" data-bs-dismiss="modal">Move</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </div>               
@@ -183,14 +183,24 @@
         </div>
         
         <!-- Load Item Modal -->
-        <div class="modal fade" id="modal-select-item">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content align-items-center">
-                    <div class="modal-header" style="height: 10px;">
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal fade" id="modal-select-item" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Load Item</h5>
+                        <button type="button" class="close btn" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
                     <div class="modal-body">
-                    </div>      
+                        <select name="load-item" id="select-load-item" class="form-select">
+
+                        </select>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" onclick="loadItemConfirm()" data-bs-dismiss="modal">Move</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    </div>   
                 </div>                  
             </div>
         </div>
