Can now load and unload items!

--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -198,7 +198,7 @@
                         </select>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" onclick="loadItemConfirm()" data-bs-dismiss="modal">Move</button>
+                        <button type="button" class="btn btn-primary" onclick="loadItemConfirm()" data-bs-dismiss="modal">Load</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>   
                 </div>                  
