--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -33,7 +33,7 @@
                             <div class="col align-items-center text-center">API Key:</div>
                             <form id="form-api" class="col-10">
                                 <input id="input-api-key" class="col-10" name="key" type="text" value="<%= api_key %>"/>
-                                <input id="input-submit-api" class="col m-2 btn btn-primary" type="submit" value="Authenticate"/>
+                                <input id="input-submit-api" class="col m-2 btn btn-primary" type="submit" onclick="authenticate()" value="Authenticate"/>
                             </form>
                         </h3>
                     </div>
