Improvements to web UI

--- a/web-service/views/index.ejs
+++ b/web-service/views/index.ejs
@@ -40,7 +40,7 @@
                 </div>
             </div>
 
-            <div class="row container m-3">                
+            <div class="row justify-content-center m-3">                
                 <div class="col"></div>
                 <!-- Robots -->
                 <div class="row col-5 m-2 box-round theme-red h-50">
@@ -86,7 +86,7 @@
                 <div class="col"></div>
             </div>
 
-            <div class="row container m-3">
+            <div class="row justify-content-center m-3">
                 <div class="col"></div>
 
                 <!-- Selected Robot Information -->
